--- a/Travlex/Travlex.csproj
+++ b/Travlex/Travlex.csproj
@@ -167,6 +167,79 @@
     <Content Include="Content\css\owl.carousel.min.css" />
     <Content Include="Content\css\owl.theme.default.min.css" />
     <Content Include="Content\css\style.css" />
+    <Content Include="Content\External\css\animate.css" />
+    <Content Include="Content\External\css\bootstrap-datepicker.css" />
+    <Content Include="Content\External\css\bootstrap.css" />
+    <Content Include="Content\External\css\flexslider.css" />
+    <Content Include="Content\External\css\icomoon.css" />
+    <Content Include="Content\External\css\magnific-popup.css" />
+    <Content Include="Content\External\css\owl.carousel.min.css" />
+    <Content Include="Content\External\css\owl.theme.default.min.css" />
+    <Content Include="Content\External\css\style.css" />
+    <Content Include="Content\External\fonts\bootstrap\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\External\fonts\flaticon\backup.txt" />
+    <Content Include="Content\External\fonts\flaticon\font\flaticon.css" />
+    <Content Include="Content\External\fonts\flaticon\font\flaticon.html" />
+    <Content Include="Content\External\fonts\flaticon\font\Flaticon.svg" />
+    <Content Include="Content\External\fonts\icomoon\icomoon.svg" />
+    <Content Include="Content\External\images\blog-1.jpg" />
+    <Content Include="Content\External\images\blog-2.jpg" />
+    <Content Include="Content\External\images\blog-3.jpg" />
+    <Content Include="Content\External\images\blog-4.jpg" />
+    <Content Include="Content\External\images\blog-5.jpg" />
+    <Content Include="Content\External\images\cover-img-1.jpg" />
+    <Content Include="Content\External\images\cover-img-2.jpg" />
+    <Content Include="Content\External\images\cover-img-3.jpg" />
+    <Content Include="Content\External\images\cover-img-4.jpg" />
+    <Content Include="Content\External\images\cover-img-5.jpg" />
+    <Content Include="Content\External\images\hotel-1.jpg" />
+    <Content Include="Content\External\images\hotel-2.jpg" />
+    <Content Include="Content\External\images\hotel-3.jpg" />
+    <Content Include="Content\External\images\hotel-4.jpg" />
+    <Content Include="Content\External\images\hotel-5.jpg" />
+    <Content Include="Content\External\images\hotel-6.jpg" />
+    <Content Include="Content\External\images\hotel-7.jpg" />
+    <Content Include="Content\External\images\hotel-8.jpg" />
+    <Content Include="Content\External\images\hotel-9.jpg" />
+    <Content Include="Content\External\images\img_bg_1.jpg" />
+    <Content Include="Content\External\images\img_bg_2.jpg" />
+    <Content Include="Content\External\images\img_bg_3.jpg" />
+    <Content Include="Content\External\images\img_bg_4.jpg" />
+    <Content Include="Content\External\images\img_bg_5.jpg" />
+    <Content Include="Content\External\images\loader.gif" />
+    <Content Include="Content\External\images\loc.png" />
+    <Content Include="Content\External\images\person1.jpg" />
+    <Content Include="Content\External\images\person2.jpg" />
+    <Content Include="Content\External\images\person3.jpg" />
+    <Content Include="Content\External\images\room-1.jpg" />
+    <Content Include="Content\External\images\room-2.jpg" />
+    <Content Include="Content\External\images\room-3.jpg" />
+    <Content Include="Content\External\images\room-4.jpg" />
+    <Content Include="Content\External\images\room-5.jpg" />
+    <Content Include="Content\External\images\room-6.jpg" />
+    <Content Include="Content\External\images\tour-1.jpg" />
+    <Content Include="Content\External\images\tour-2.jpg" />
+    <Content Include="Content\External\images\tour-3.jpg" />
+    <Content Include="Content\External\images\tour-4.jpg" />
+    <Content Include="Content\External\images\tour-5.jpg" />
+    <Content Include="Content\External\images\tour-6.jpg" />
+    <Content Include="Content\External\images\tour-7.jpg" />
+    <Content Include="Content\External\images\tour-8.jpg" />
+    <Content Include="Content\External\js\bootstrap-datepicker.js" />
+    <Content Include="Content\External\js\bootstrap.min.js" />
+    <Content Include="Content\External\js\google_map.js" />
+    <Content Include="Content\External\js\jquery.countTo.js" />
+    <Content Include="Content\External\js\jquery.easing.1.3.js" />
+    <Content Include="Content\External\js\jquery.flexslider-min.js" />
+    <Content Include="Content\External\js\jquery.magnific-popup.min.js" />
+    <Content Include="Content\External\js\jquery.min.js" />
+    <Content Include="Content\External\js\jquery.stellar.min.js" />
+    <Content Include="Content\External\js\jquery.waypoints.min.js" />
+    <Content Include="Content\External\js\magnific-popup-options.js" />
+    <Content Include="Content\External\js\main.js" />
+    <Content Include="Content\External\js\modernizr-2.6.2.min.js" />
+    <Content Include="Content\External\js\owl.carousel.min.js" />
+    <Content Include="Content\External\js\respond.min.js" />
     <Content Include="Content\fonts\bootstrap\glyphicons-halflings-regular.svg" />
     <Content Include="Content\fonts\flaticon\backup.txt" />
     <Content Include="Content\fonts\flaticon\font\flaticon.css" />
@@ -338,6 +411,104 @@
     <Content Include="Content\sass\_bootstrap-compass.scss" />
     <Content Include="Content\sass\_bootstrap-mincer.scss" />
     <Content Include="Content\sass\_bootstrap-sprockets.scss" />
+    <Content Include="Content\External\css\.DS_Store" />
+    <Content Include="Content\External\css\bootstrap.css.map" />
+    <Content Include="Content\External\css\style.css.map" />
+    <Content Include="Content\External\fonts\.DS_Store" />
+    <Content Include="Content\External\fonts\bootstrap\.DS_Store" />
+    <Content Include="Content\External\fonts\bootstrap\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\External\fonts\bootstrap\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\External\fonts\bootstrap\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\External\fonts\bootstrap\glyphicons-halflings-regular.woff2" />
+    <Content Include="Content\External\fonts\flaticon\.DS_Store" />
+    <Content Include="Content\External\fonts\flaticon\font\Flaticon.eot" />
+    <Content Include="Content\External\fonts\flaticon\font\Flaticon.ttf" />
+    <Content Include="Content\External\fonts\flaticon\font\Flaticon.woff" />
+    <Content Include="Content\External\fonts\flaticon\font\_flaticon.scss" />
+    <Content Include="Content\External\fonts\flaticon\license\license.pdf" />
+    <Content Include="Content\External\fonts\icomoon\.DS_Store" />
+    <Content Include="Content\External\fonts\icomoon\icomoon.eot" />
+    <Content Include="Content\External\fonts\icomoon\icomoon.ttf" />
+    <Content Include="Content\External\fonts\icomoon\icomoon.woff" />
+    <Content Include="Content\External\images\.DS_Store" />
+    <Content Include="Content\External\js\.DS_Store" />
+    <Content Include="Content\External\sass\.DS_Store" />
+    <Content Include="Content\External\sass\bootstrap.scss" />
+    <Content Include="Content\External\sass\bootstrap\.DS_Store" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_alerts.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_background-variant.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_border-radius.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_buttons.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_center-block.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_clearfix.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_forms.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_gradients.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_grid-framework.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_grid.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_hide-text.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_image.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_labels.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_list-group.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_nav-divider.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_nav-vertical-align.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_opacity.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_pagination.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_panels.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_progress-bar.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_reset-filter.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_reset-text.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_resize.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_responsive-visibility.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_size.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_tab-focus.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_table-row.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_text-emphasis.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_text-overflow.scss" />
+    <Content Include="Content\External\sass\bootstrap\mixins\_vendor-prefixes.scss" />
+    <Content Include="Content\External\sass\bootstrap\_alerts.scss" />
+    <Content Include="Content\External\sass\bootstrap\_badges.scss" />
+    <Content Include="Content\External\sass\bootstrap\_breadcrumbs.scss" />
+    <Content Include="Content\External\sass\bootstrap\_button-groups.scss" />
+    <Content Include="Content\External\sass\bootstrap\_buttons.scss" />
+    <Content Include="Content\External\sass\bootstrap\_carousel.scss" />
+    <Content Include="Content\External\sass\bootstrap\_close.scss" />
+    <Content Include="Content\External\sass\bootstrap\_code.scss" />
+    <Content Include="Content\External\sass\bootstrap\_component-animations.scss" />
+    <Content Include="Content\External\sass\bootstrap\_dropdowns.scss" />
+    <Content Include="Content\External\sass\bootstrap\_forms.scss" />
+    <Content Include="Content\External\sass\bootstrap\_glyphicons.scss" />
+    <Content Include="Content\External\sass\bootstrap\_grid.scss" />
+    <Content Include="Content\External\sass\bootstrap\_input-groups.scss" />
+    <Content Include="Content\External\sass\bootstrap\_jumbotron.scss" />
+    <Content Include="Content\External\sass\bootstrap\_labels.scss" />
+    <Content Include="Content\External\sass\bootstrap\_list-group.scss" />
+    <Content Include="Content\External\sass\bootstrap\_media.scss" />
+    <Content Include="Content\External\sass\bootstrap\_mixins.scss" />
+    <Content Include="Content\External\sass\bootstrap\_modals.scss" />
+    <Content Include="Content\External\sass\bootstrap\_navbar.scss" />
+    <Content Include="Content\External\sass\bootstrap\_navs.scss" />
+    <Content Include="Content\External\sass\bootstrap\_normalize.scss" />
+    <Content Include="Content\External\sass\bootstrap\_pager.scss" />
+    <Content Include="Content\External\sass\bootstrap\_pagination.scss" />
+    <Content Include="Content\External\sass\bootstrap\_panels.scss" />
+    <Content Include="Content\External\sass\bootstrap\_popovers.scss" />
+    <Content Include="Content\External\sass\bootstrap\_print.scss" />
+    <Content Include="Content\External\sass\bootstrap\_progress-bars.scss" />
+    <Content Include="Content\External\sass\bootstrap\_responsive-embed.scss" />
+    <Content Include="Content\External\sass\bootstrap\_responsive-utilities.scss" />
+    <Content Include="Content\External\sass\bootstrap\_scaffolding.scss" />
+    <Content Include="Content\External\sass\bootstrap\_tables.scss" />
+    <Content Include="Content\External\sass\bootstrap\_theme.scss" />
+    <Content Include="Content\External\sass\bootstrap\_thumbnails.scss" />
+    <Content Include="Content\External\sass\bootstrap\_tooltip.scss" />
+    <Content Include="Content\External\sass\bootstrap\_type.scss" />
+    <Content Include="Content\External\sass\bootstrap\_utilities.scss" />
+    <Content Include="Content\External\sass\bootstrap\_variables.scss" />
+    <Content Include="Content\External\sass\bootstrap\_wells.scss" />
+    <Content Include="Content\External\sass\style.scss" />
+    <Content Include="Content\External\sass\_bootstrap-compass.scss" />
+    <Content Include="Content\External\sass\_bootstrap-mincer.scss" />
+    <Content Include="Content\External\sass\_bootstrap-sprockets.scss" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
